test/Feature/Output/CheckMemoryAccess.c.tmp.klee-out/test000002.ptr.err
Error: check_memory_access: memory error
File: /home/sanghu/TracerX/tracerx/test/Feature/CheckMemoryAccess.c
Line: 22
assembly.ll line: 43
Stack: 
	#000000043 in main () at /home/sanghu/TracerX/tracerx/test/Feature/CheckMemoryAccess.c:22
Info: 
	address: 55273496
	next: object at 55363328 of size 15
		MO13[15] allocated at global:.str16
	prev: object at 55273496 of size 4
		MO22[4] allocated at main():  %buf = alloca [4 x i8], align 1
